# websocket-rust

./: .env  .fsw.yml  Cargo.toml  LICENSE.md  README.md  chat.html
src/: main.rs
src/server/: mod.rs  state.rs  stats.rs  status.rs  ws.rs
