[package]
name = "rust-websocket"
version = "0.1.0"
authors = ["Eloff <dan.eloff@gmail.com>"]
license-file = "LICENSE.md"
description = "Boilerplate and intial setup for a high-performance Rust WebSocket server using Axum framework (from the makers of Tokio) and SeaORM with PostgreSQL."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.27"
tokio = { version = "1.26.0", features = ["full"] }
hyper = { version = "0.14.25", features = ["full"] }
tower = "0.4.13"
axum = { version = "0.6.11", features = ["ws", "query"] }
sea-orm = { version = "0.11.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "with-json"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["raw_value"] }
dotenvy = "0.15.6"

[dev-dependencies]
